--- a/.github/workflows/auto_bundle.yml
+++ b/.github/workflows/auto_bundle.yml
@@ -27,6 +27,6 @@ jobs:
           tag_name: v${{ github.run_number }}
           name: Auto Release ${{ github.run_number }}
           files: |
-            *.py
+            bundled.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
